--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Owl Club" />
+    <meta name="description" content="3D Rectangle Generator" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Owl Club</title>
+    <title>3D Rectangle Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
